--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -12,10 +12,10 @@ ci:
     - pip-compile
     - schemas
   submodules: true
-# exclude: >
-#   (?x)^(
-#     .config/requirements.*|
-#   )$
+exclude: >
+  (?x)^(
+    src/mkdocs_ansible/_version.py
+  )$
 repos:
   - repo: meta
     hooks:
