--- a/.config/requirements.in
+++ b/.config/requirements.in
@@ -1,10 +1,12 @@
 cairosvg>=2.6.0
 markdown-exec>=1.3.0
+markdown-include>=0.8.1
 mkdocs-gen-files>=0.4.0
 mkdocs-htmlproofer-plugin>=0.10.2
 mkdocs-material-extensions>=1.1.1
 mkdocs-material>=9.0.13
-mkdocs-minify-plugin
+mkdocs-minify-plugin>=0.6.2
+mkdocs-monorepo-plugin>=1.0.4
 mkdocs>=1.4.2
 mkdocstrings-python>=0.8.3
 mkdocstrings>=0.20.0
