--- a/.config/requirements.txt
+++ b/.config/requirements.txt
@@ -24,6 +24,7 @@ jinja2==3.1.2
 jsmin==3.0.1
 markdown==3.3.7
 markdown-exec==1.3.0
+markdown-include==0.8.1
 markupsafe==2.1.2
 mergedeep==1.3.4
 mkdocs==1.4.2
@@ -33,6 +34,7 @@ mkdocs-htmlproofer-plugin==0.10.3
 mkdocs-material==9.1.1
 mkdocs-material-extensions==1.1.1
 mkdocs-minify-plugin==0.6.2
+mkdocs-monorepo-plugin==1.0.4
 mkdocstrings==0.20.0
 mkdocstrings-python==0.8.3
 packaging==23.0
@@ -42,12 +44,14 @@ pycparser==2.21
 pygments==2.14.0
 pymdown-extensions==9.10
 python-dateutil==2.8.2
+python-slugify==8.0.1
 pyyaml==6.0
 pyyaml-env-tag==0.1
 regex==2022.10.31
 requests==2.28.2
 six==1.16.0
 soupsieve==2.4
+text-unidecode==1.3
 tinycss2==1.2.1
 urllib3==1.26.14
 watchdog==2.3.1
