Ensure mkdocs-ansible uses Ansible logo

--- a/src/mkdocs_ansible/mkdocs_theme.yml
+++ b/src/mkdocs_ansible/mkdocs_theme.yml
@@ -27,6 +27,8 @@ font:
 # From Material 5.x on, icons are inlined into the HTML and CSS as SVGs. Some
 # icons that are part of the HTML can be configured and replaced
 icon:
+  # this look inside theme/.icons/<...>.svg
+  logo: logo
 
 favicon: assets/images/favicon.ico
 static_templates:
