--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -44,7 +44,8 @@ theme:
 
 # Plugins
 plugins:
-  - search:
+  - material/social
+  - material/search:
       separator: '[\s\-,:!=\[\]()"`/]+|\.(?!\d)|&[lg]t;|(?!\b)(?=[A-Z][a-z])'
   - minify:
       minify_html: true
