Ensure we use the right lock file

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -44,7 +44,7 @@ ignore-paths = "^src/.*/(_version|_vendor).*$"
 
 [tool.setuptools.dynamic]
 optional-dependencies.test = { file = [".config/requirements-test.txt"] }
-optional-dependencies.lock = { file = [".config/requirements-lock.txt"] }
+optional-dependencies.lock = { file = [".config/requirements.txt"] }
 dependencies = { file = [".config/requirements.in"] }
 
 [tool.setuptools]
