--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -10,7 +10,6 @@ ci:
   skip:
     # https://github.com/pre-commit-ci/issues/issues/55
     - pip-compile
-    - schemas
   submodules: true
 repos:
   - repo: meta
@@ -116,7 +115,7 @@ repos:
         name: lock
         alias: lock
         always_run: true
-        entry: pip-compile --upgrade --resolver=backtracking -q --no-annotate --output-file=.config/requirements-lock.txt pyproject.toml --strip-extras --unsafe-package ruamel-yaml-clib
+        entry: pip-compile --upgrade --resolver=backtracking -q --no-annotate --output-file=.config/requirements.txt pyproject.toml --strip-extras --unsafe-package ruamel-yaml-clib
         files: ^.config\/requirements.*$
         language: python
         language_version: "3.9" # minimal we support officially
@@ -128,21 +127,10 @@ repos:
         name: deps
         alias: deps
         always_run: true
-        entry: pip-compile --resolver=backtracking -q --no-annotate --output-file=.config/requirements.txt pyproject.toml --extra docs --extra test --strip-extras --unsafe-package ruamel-yaml-clib
+        entry: pip-compile --resolver=backtracking -q --no-annotate --output-file=.config/requirements.txt pyproject.toml --strip-extras --unsafe-package ruamel-yaml-clib
         files: ^.config\/requirements.*$
         language: python
         language_version: "3.9" # minimal we support officially
         pass_filenames: false
-        additional_dependencies:
-          - pip>=22.3.1
-      - id: pip-compile
-        entry: pip-compile --resolver=backtracking -q --no-annotate --output-file=.config/requirements.txt pyproject.toml --extra docs --extra test --strip-extras --unsafe-package ruamel-yaml-clib --upgrade
-        language: python
-        always_run: true
-        pass_filenames: false
-        files: ^.config\/requirements.*$
-        alias: up
-        stages: [manual]
-        language_version: "3.9" # minimal we support officially
         additional_dependencies:
           - pip>=22.3.1
