--- a/.config/requirements.txt
+++ b/.config/requirements.txt
@@ -4,57 +4,61 @@
 #
 #    pip-compile --no-annotate --output-file=.config/requirements.txt --strip-extras --unsafe-package=ruamel-yaml-clib pyproject.toml
 #
+babel==2.12.1
 beautifulsoup4==4.12.2
-cairocffi==1.5.1
-cairosvg==2.7.0
-certifi==2023.5.7
-cffi==1.15.1
-charset-normalizer==3.1.0
-click==8.1.3
+cairocffi==1.6.1
+cairosvg==2.7.1
+certifi==2023.7.22
+cffi==1.16.0
+charset-normalizer==3.2.0
+click==8.1.7
 colorama==0.4.6
 csscompressor==0.9.5
 cssselect2==0.7.0
 defusedxml==0.7.1
 ghp-import==2.1.0
-griffe==0.29.0
+griffe==0.36.4
 htmlmin2==0.1.13
 idna==3.4
-importlib-metadata==6.6.0
+importlib-metadata==6.8.0
 jinja2==3.1.2
 jsmin==3.0.1
-markdown==3.3.7
+markdown==3.4.4
 markdown-exec==1.6.0
 markdown-include==0.8.1
-markupsafe==2.1.2
+markupsafe==2.1.3
 mergedeep==1.3.4
-mkdocs==1.4.3
-mkdocs-autorefs==0.4.1
+mkdocs==1.5.3
+mkdocs-autorefs==0.5.0
 mkdocs-gen-files==0.5.0
-mkdocs-htmlproofer-plugin==0.13.1
-mkdocs-material==9.1.15
-mkdocs-material-extensions==1.1.1
-mkdocs-minify-plugin==0.6.4
+mkdocs-htmlproofer-plugin==1.0.0
+mkdocs-material==9.4.2
+mkdocs-material-extensions==1.2
+mkdocs-minify-plugin==0.7.1
 mkdocs-monorepo-plugin==1.0.5
-mkdocstrings==0.22.0
-mkdocstrings-python==1.1.0
+mkdocstrings==0.23.0
+mkdocstrings-python==1.7.1
 packaging==23.1
-pillow==9.5.0
-pipdeptree==2.7.1
+paginate==0.5.6
+pathspec==0.11.2
+pillow==10.0.1
+pipdeptree==2.13.0
+platformdirs==3.10.0
 pycparser==2.21
-pygments==2.15.1
-pymdown-extensions==10.0.1
+pygments==2.16.1
+pymdown-extensions==10.3
 python-dateutil==2.8.2
 python-slugify==8.0.1
-pyyaml==6.0
+pyyaml==6.0.1
 pyyaml-env-tag==0.1
-regex==2023.5.5
+regex==2023.8.8
 requests==2.31.0
 six==1.16.0
-soupsieve==2.4.1
+soupsieve==2.5
 text-unidecode==1.3
 tinycss2==1.2.1
-typing-extensions==4.6.2
-urllib3==2.0.2
+typing-extensions==4.8.0
+urllib3==2.0.5
 watchdog==3.0.0
 webencodings==0.5.1
-zipp==3.15.0
+zipp==3.17.0
