--- a/tox.ini
+++ b/tox.ini
@@ -84,7 +84,8 @@ setenv =
 skip_install = false
 usedevelop = true
 commands =
-  mkdocs build {posargs:}
+  mkdocs build --strict --strict --site-dir=_readthedocs/html/ {posargs:}
+  linkchecker -f linkcheckerrc _readthedocs/html/
 
 [testenv:pkg]
 description =
