--- a/.config/requirements.txt
+++ b/.config/requirements.txt
@@ -16,6 +16,7 @@ colorama==0.4.6
 csscompressor==0.9.5
 cssselect2==0.7.0
 defusedxml==0.7.1
+dnspython==2.4.2
 ghp-import==2.1.0
 griffe==0.38.0
 htmlmin2==0.1.13
@@ -23,6 +24,7 @@ idna==3.4
 importlib-metadata==6.8.0
 jinja2==3.1.2
 jsmin==3.0.1
+linkchecker==10.3.0
 markdown==3.5.1
 markdown-exec==1.7.0
 markdown-include==0.8.1
