Revert "use ansible color scheme"
This reverts commit 3773022927c49e7f0f25357e0dda91a44b22424b.

--- a/src/mkdocs_ansible/mkdocs_theme.yml
+++ b/src/mkdocs_ansible/mkdocs_theme.yml
@@ -6,14 +6,14 @@ direction: ltr
 features: []
 palette:
   - scheme: default
-    primary: #5bbdbf
-    accent: #5bbdbf
+    primary: teal
+    accent: teal
     toggle:
       icon: material/brightness-7
       name: Switch to dark mode
   - scheme: slate
-    primary: #5bbdbf
-    accent: #5bbdbf
+    primary: teal
+    accent: teal
     toggle:
       icon: material/brightness-4
       name: Switch to light mode
