--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -115,7 +115,7 @@ repos:
         name: lock
         alias: lock
         always_run: true
-        entry: pip-compile --upgrade --resolver=backtracking -q --no-annotate --output-file=.config/requirements.txt pyproject.toml --strip-extras --unsafe-package ruamel-yaml-clib
+        entry: pip-compile --upgrade --resolver=backtracking -q --no-annotate --output-file=.config/constraints.txt pyproject.toml --strip-extras --unsafe-package ruamel-yaml-clib
         files: ^.config\/requirements.*$
         language: python
         language_version: "3.10" # minimal we support officially
@@ -127,7 +127,7 @@ repos:
         name: deps
         alias: deps
         always_run: true
-        entry: pip-compile --resolver=backtracking -q --no-annotate --output-file=.config/requirements.txt pyproject.toml --strip-extras --unsafe-package ruamel-yaml-clib
+        entry: pip-compile --resolver=backtracking -q --no-annotate --output-file=.config/constraints.txt pyproject.toml --strip-extras --unsafe-package ruamel-yaml-clib
         files: ^.config\/requirements.*$
         language: python
         language_version: "3.10" # minimal we support officially
