--- a/tox.ini
+++ b/tox.ini
@@ -27,7 +27,7 @@ setenv =
 
   COVERAGE_FILE = {env:COVERAGE_FILE:{toxworkdir}/.coverage.{envname}}
   COVERAGE_PROCESS_START={toxinidir}/pyproject.toml
-  PIP_CONSTRAINT = {toxinidir}/.config/requirements.txt
+  PIP_CONSTRAINT = {toxinidir}/.config/constraints.txt
   devel,pkg: PIP_CONSTRAINT = /dev/null
   PIP_DISABLE_PIP_VERSION_CHECK = 1
   PRE_COMMIT_COLOR = always
