Upgrade minimum Python to 3.10

--- a/.github/workflows/tox.yml
+++ b/.github/workflows/tox.yml
@@ -28,12 +28,13 @@ jobs:
         id: generate_matrix
         uses: coactions/dynamic-matrix@v1
         with:
-          min_python: "3.9"
-          max_python: "3.11"
+          default_python: "3.10"
+          min_python: "3.10"
+          max_python: "3.12"
           other_names: |
             lint
             docs
-          # platforms: linux,macos
+          platforms: linux,macos
 
   build:
     name: ${{ matrix.name }}
@@ -70,11 +71,11 @@ jobs:
             examples/playbooks/collections/ansible_collections
           key: galaxy-${{ hashFiles('examples/playbooks/collections/requirements.yml') }}
 
-      - name: Set up Python ${{ matrix.python_version || '3.9' }}
+      - name: Set up Python ${{ matrix.python_version || '3.10' }}
         uses: actions/setup-python@v5
         with:
           cache: pip
-          python-version: ${{ matrix.python_version || '3.9' }}
+          python-version: ${{ matrix.python_version || '3.10' }}
 
       - name: Install tox
         run: |
