--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ requires = [
 build-backend = "setuptools.build_meta"
 
 [project]
-requires-python = ">=3.9"
+requires-python = ">=3.10"
 dynamic = ["version", "dependencies", "optional-dependencies"]
 name = "mkdocs-ansible"
 description = "Ansible MkDocs Theme based on mkdocs-material"
@@ -22,6 +22,9 @@ classifiers = [
   "License :: OSI Approved :: MIT License",
   "Programming Language :: JavaScript",
   "Programming Language :: Python",
+  'Programming Language :: Python :: 3.10',
+  'Programming Language :: Python :: 3.11',
+  'Programming Language :: Python :: 3.12',
   "Topic :: Documentation",
   "Topic :: Software Development :: Documentation",
   "Topic :: Text Processing :: Markup :: HTML",
@@ -39,7 +42,7 @@ ansible = "mkdocs_ansible"
 
 [tool.mypy]
 strict = true
-python_version = "3.9"
+python_version = "3.10"
 warn_unused_configs = true
 exclude = ['build']
 
