--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,7 @@
 # spell-checker:ignore linkcheck basepython changedir envdir envlist envname envsitepackagesdir passenv setenv testenv toxinidir toxworkdir usedevelop doctrees envpython posargs
 [tox]
-minversion = 4.0.0
+requires =
+    tox>=4.11.4
 envlist =
   lint
   pkg
