--- a/src/mkdocs_ansible/mkdocs_theme.yml
+++ b/src/mkdocs_ansible/mkdocs_theme.yml
@@ -3,20 +3,28 @@ extends: material
 
 language: en
 direction: ltr
-features: []
 palette:
-  - scheme: default
-    primary: teal
-    accent: teal
-    toggle:
-      icon: material/brightness-7
-      name: Switch to dark mode
-  - scheme: slate
-    primary: teal
-    accent: teal
-    toggle:
-      icon: material/brightness-4
-      name: Switch to light mode
+    # Palette toggle for automatic mode
+    - media: "(prefers-color-scheme)"
+      toggle:
+        icon: material/brightness-auto
+        name: Switch to light mode
+
+    # Palette toggle for light mode
+    - media: "(prefers-color-scheme: light)"
+      scheme: default
+      primary: custom
+      toggle:
+        icon: material/brightness-7
+        name: Switch to dark mode
+
+    # Palette toggle for dark mode
+    - media: "(prefers-color-scheme: dark)"
+      scheme: slate
+      primary: custom
+      toggle:
+        icon: material/brightness-4
+        name: Switch to system preference
 
 font:
   # Must be a valid Google Font name from https://fonts.google.com/
