--- a/tox.ini
+++ b/tox.ini
@@ -43,7 +43,7 @@ description = Run all linters
 basepython = python3.10
 deps =
   pre-commit>=2.6.0
-  setuptools>=51.1.1
+  setuptools>=65.3.0
   pytest>=7.2.0  # to updated schemas
 skip_install = true
 commands =
@@ -85,14 +85,14 @@ setenv =
 skip_install = false
 usedevelop = true
 commands =
-  mkdocs build --strict --strict --site-dir=_readthedocs/html/ {posargs:}
+  mkdocs build -v -c --strict --site-dir=_readthedocs/html/ {posargs:}
   linkchecker -f linkcheckerrc _readthedocs/html/
 
 [testenv:pkg]
 description =
   Build package, verify metadata, install package and assert behavior when ansible is missing.
 deps =
-  build >= 0.9.0
+  build >= 1.0.3
   twine >= 4.0.1
 skip_install = true
 # Ref: https://twitter.com/di_codes/status/1044358639081975813
