Update Ansible theme to match brand color (#99)
* Update Ansible theme to match brand color

* chore: auto fixes from pre-commit.com hooks

for more information, see https://pre-commit.ci

---------

Co-authored-by: pre-commit-ci[bot] <66853113+pre-commit-ci[bot]@users.noreply.github.com>

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -47,6 +47,8 @@ plugins:
   - material/social
   - material/search:
       separator: '[\s\-,:!=\[\]()"`/]+|\.(?!\d)|&[lg]t;|(?!\b)(?=[A-Z][a-z])'
+  - material/tags
+  - material/offline
   - minify:
       minify_html: true
 
