--- a/.github/workflows/ack.yml
+++ b/.github/workflows/ack.yml
@@ -1,5 +1,5 @@
 ---
-# See https://github.com/ansible/devtools/blob/main/.github/workflows/ack.yml
+# See https://github.com/ansible/team-devtools/blob/main/.github/workflows/ack.yml
 name: ack
 on:
   pull_request_target:
@@ -7,4 +7,4 @@ on:
 
 jobs:
   ack:
-    uses: ansible/devtools/.github/workflows/ack.yml@main
+    uses: ansible/team-devtools/.github/workflows/ack.yml@main
