--- a/tox.ini
+++ b/tox.ini
@@ -8,6 +8,8 @@ envlist =
   docs
 
 [testenv]
+extras =
+  test
 passenv =
   CURL_CA_BUNDLE  # https proxies, https://github.com/tox-dev/tox/issues/1437
   FORCE_COLOR
@@ -25,9 +27,8 @@ passenv =
   LANG
   LC_*
 setenv =
-
-  COVERAGE_FILE = {env:COVERAGE_FILE:{toxworkdir}/.coverage.{envname}}
-  COVERAGE_PROCESS_START={toxinidir}/pyproject.toml
+  COVERAGE_FILE = {envdir}/.coverage.{envname}
+  ; COVERAGE_PROCESS_START={toxinidir}/pyproject.toml
   PIP_CONSTRAINT = {toxinidir}/.config/constraints.txt
   devel,pkg: PIP_CONSTRAINT = /dev/null
   PIP_DISABLE_PIP_VERSION_CHECK = 1
@@ -35,6 +36,12 @@ setenv =
   FORCE_COLOR = 1
 allowlist_externals =
   sh
+commands_pre =
+  sh -c "rm -f .coverage* coverage.xml 2>/dev/null || true"
+commands =
+  coverage run -m pytest {posargs}
+  sh -c "coverage combine -a -q --data-file={envdir}/.coverage {toxworkdir}/*/.coverage.* && coverage xml --data-file={envdir}/.coverage -o {envdir}/coverage.xml --fail-under=0 && coverage report --data-file={envdir}/.coverage"
+package = editable
 
 [testenv:lint]
 description = Run all linters
