--- a/tox.ini
+++ b/tox.ini
@@ -6,8 +6,13 @@ envlist =
   lint
   pkg
   docs
+  py
+  devel
 
 [testenv]
+description =
+  Run tests
+  devel: without constrained dependencies
 extras =
   test
 passenv =
@@ -100,6 +105,7 @@ description =
   Build package, verify metadata, install package and assert behavior when ansible is missing.
 deps =
   build >= 1.0.3
+  pip
   twine >= 4.0.1
 skip_install = true
 # Ref: https://twitter.com/di_codes/status/1044358639081975813
