--- a/tox.ini
+++ b/tox.ini
@@ -55,6 +55,7 @@ description = Run all linters
 basepython = python3.10
 deps =
   pre-commit>=2.6.0
+  pre-commit-uv>=0.5.0
   setuptools>=65.3.0
   pytest>=7.2.0  # to updated schemas
 skip_install = true
